fix: 添加导出功能

--- a/src/uni.scss
+++ b/src/uni.scss
@@ -15,10 +15,13 @@
 /* 颜色变量 */
 
 /* 行为相关颜色 */
-$uni-color-primary: #007aff;
+$active-color: #2384EB;//#0090F9;
+$border-color: #E1E1E1;//#f2f2f2;
+$uni-color-primary: #2384EB;
 $uni-color-success: #4cd964;
 $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
+
 
 /* 文字基本颜色 */
 $uni-text-color:#333;//基本色
